<resources>

    <string name="app_name">ShoeStore</string>

    <!-- Error Messages -->
    <string name="error_field_required">This field is required.</string>

    <!-- Menu Labels -->
    <string name="menu_sign_out">Sign Out</string>

    <!-- Screens Labels -->
    <string name="label_login">Login</string>
    <string name="label_welcome">Welcome</string>
    <string name="label_instructions">Instructions</string>
    <string name="label_shoes_list">Discover Shoes</string>
    <string name="label_shoe_details">Add New Shoe</string>

    <!-- Login Screen -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="create_one_now">Create one now.</string>

    <!-- Welcome Screen -->
    <string name="hi_there">Hi There!</string>
    <string name="welcome_to_shoe_store">Welcome to Shoe Store, where you will find the best deals in the whole world!</string>
    <string name="txt_continue">Continue</string>

    <!-- Instructions Screen -->
    <string name="get_started">Get Started</string>
    <string name="explore_shoe_store">Before exploring our available products, we would like to tell you some instructions on how to use the app first.</string>
    <string name="start_exploring">Start Exploring</string>

    <!-- Shoes List Screen -->
    <string name="no_products">No products in stock.</string>

    <!-- Shoes Details Screen -->
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="company">Company</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>

</resources>
