<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="handler"
            type="com.udacity.shoestore.ui.WelcomeFragment" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hi_there"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <ImageView
            style="@style/IllustrationImage"
            android:layout_marginTop="32dp"
            android:src="@drawable/img_welcome" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="32dp"
            android:text="@string/welcome_to_shoe_store"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_continue"
            style="@style/NormalButton"
            android:layout_width="match_parent"
            android:layout_marginTop="32dp"
            android:onClick="@{() -> handler.navigateToInstructions()}"
            android:text="@string/txt_continue" />

    </LinearLayout>

</layout>
