<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="handler"
            type="com.udacity.shoestore.ui.InstructionsFragment" />

    </data>

    <!--
    LinearLayout is the best choice here, since the layout is simple,
    and all views are above each other. No need for ConstraintLayout.
    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="32dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/get_started"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <ImageView
            style="@style/IllustrationImage"
            android:layout_marginTop="32dp"
            android:src="@drawable/img_instructions" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="32dp"
            android:text="@string/explore_shoe_store"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_start_exploring"
            style="@style/NormalButton"
            android:layout_width="match_parent"
            android:layout_marginTop="32dp"
            android:onClick="@{() -> handler.navigateToShoesList()}"
            android:text="@string/start_exploring" />

    </LinearLayout>

</layout>
